--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="hobbies" class="hobbies" style="text-align: center;">
         <table >
             <tr>
-                <td class="td1">
+                <td class="td1" id="hobbie">
                     <h1>Hobbies</h1>
                     <h1>or</h1>
                     <h1>Interests</h1>
